[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Silver.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
font_data = ExtResource( 1 )

[node name="Popup" type="Popup"]
margin_right = 900.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.807843, 0.768627, 0.768627, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -275.0
margin_right = 425.0
margin_bottom = 275.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 850.0
margin_bottom = 550.0
columns = 2

[node name="MasterVolText" type="Label" parent="MarginContainer/GridContainer"]
margin_right = 151.0
margin_bottom = 45.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="MarginContainer/GridContainer"]
margin_left = 450.0
margin_right = 850.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -20.0
max_value = 0.0

[node name="MusicVolText" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 49.0
margin_right = 135.0
margin_bottom = 94.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/GridContainer"]
margin_left = 450.0
margin_top = 49.0
margin_right = 850.0
margin_bottom = 65.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -20.0
max_value = 0.0
value = -4.0

[node name="SFXVolText" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 98.0
margin_right = 116.0
margin_bottom = 143.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SFX Volume"

[node name="SFXVolSlider" type="HSlider" parent="MarginContainer/GridContainer"]
margin_left = 450.0
margin_top = 98.0
margin_right = 850.0
margin_bottom = 114.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -20.0
max_value = 0.0
value = -4.0

[connection signal="popup_hide" from="." to="." method="_on_Popup_popup_hide"]
[connection signal="value_changed" from="MarginContainer/GridContainer/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/SFXVolSlider" to="." method="_on_SFXVolSlider_value_changed"]
